# lumen

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  Dockerfile  MANIFEST.in  PyodideServiceWorker.js  README.md  app_test.py  comparison.html  data_dictionary.yaml  dodo.py  gen_ref_pages.py  genindex.html  index.html  installation.html  mkdocs.yml  objects.inv  pixi.toml  pyproject.toml  pyrightconfig.json  search.html  search.json  searchindex.js  setup.cfg  setup.py  site.webmanifest  sitemap.xml  tox.ini  zensical.toml
.github/workflows/: build.yaml  build.yml  docs.yaml  docs.yml  gallery.yaml  lock.yaml  nightly_lock.yaml  test.yaml  test.yml
_static/: PyodideWebWorker.js  ServiceHandler.js  WorkerHandler.js  custom.css  dataframe.css  documentation_options.js
_static/excalidraw/: lumen_dashboard.excalidraw
assets/: penguin_counts_by_island.html
assets/javascripts/: bundle.8ffeb9c9.min.js
background/: index.html  lumen_in_python.html  pipeline_branching.html
configuration/agents/: index.html
configuration/analyses/: index.html
configuration/cli/: index.html
configuration/context/: index.html
configuration/controls/: index.html
configuration/coordinators/: index.html
configuration/embeddings/: index.html
configuration/llm_providers/: index.html
configuration/prompts/: index.html
configuration/reports/: index.html
configuration/sources/: index.html
configuration/spec/: index.html
configuration/tools/: index.html
configuration/ui/: index.html
configuration/vector_stores/: index.html
contributing/: index.html
doc/: conf.py  generate_reference.py  index.md  installation.md
doc/_static/: custom.css
doc/_templates/: layout.html
doc/background/: index.md  lumen_in_python.md  pipeline_branching.md
doc/gallery/: ai_windturbines.md  bikes.md  earthquakes.md  index.md  nyc_taxi.md  penguins.md  precip.md  seattle.md  windturbines.md
doc/getting_started/: build_dashboard.md  configuring_lumen_ai.md  core_concepts.md  index.md  lumen_ai.md  lumen_architecture.md  pipelines.md  using_lumen_ai.md
doc/how_to/: index.md
doc/lumen_ai/: index.md
doc/lumen_spec/: index.md
doc/ui/: configuration.md
doc/user_guide/: index.md
docs/: DOCUMENTATION_SUMMARY.md  comparison.md  conf.py  contributing.md  dashboard.md  examples.md  extending.md  faq.md  gen_ref_pages.py  generate_reference.py  index.md  installation.md  llms.txt  quick_start.md  releases.md  rest.md
docs/_static/: custom.css
docs/architecture/: filter.md  index.md  metric.md  pipeline.md  queryadaptor.md  source.md  transform.md  view.md
docs/assets/: extra.css  extra.js
docs/background/: index.md  lumen_in_python.md  pipeline_branching.md
docs/conceptual/: index.md  lumen_python.md
docs/configuration/: agents.md  analyses.md  cli.md  context.md  controls.md  coordinators.md  embeddings.md  index.md  llm_providers.md  prompts.md  reports.md  sources.md  tools.md  ui.md  vector_stores.md
docs/examples/: index.md
docs/gallery/: bikes.md  index.md  nyc_taxi.md  penguins.md  precip.md  seattle.md
docs/getting_started/: build_an_app.md  build_dashboard.md  building_lumen_apps.md  core_concepts.md  index.md  installation.md  launching_lumen.md  lumen_architecture.md  navigating_the_ui.md  using_lumen_ai.md
docs/how_to/: branch_yaml.md  chain_python.md  deploy.md  ht_chain_python.md  ht_pipeline_python.md  ht_spec.md  ht_validate.md  index.md  local_components.md  pipeline_python.md  spec.md  validate.md  variables_and_references.md
docs/reference/: api.md  contributing.md  index.md  report_api.md  report_howto.md
docs/tutorials/: build_dashboard_with_spec.md  weather_sounding.md
docs/ui/: index.md
docs/user_guide/: dashboard.md  pipeline.md  rest.md
examples/: xarray_air_temperature.yaml  xarray_air_temperature_demo.py
examples/bikes/: bikes.yaml  dashboard.yaml
examples/finance/: README.md  __init__.py  agent.py  analyses.py  app.py  tools.py
examples/gallery/: anaconda-project.yml  index.html
examples/intake_precip/: catalog.yml  dashboard.yml
examples/nyc_taxi/: dashboard.yaml
examples/penguins/: dashboard.yaml  penguins.yaml
examples/precip/: dashboard.yaml  dashboard.yml  precipitation.yaml
examples/seattle/: dashboard.yaml  weather.yaml
examples/tutorials/: index.html
examples/user_guide/: Pipeline.ipynb
extending/: index.html
faq/: index.html
gallery/: bikes.html  earthquakes.html  index.html  nyc_taxi.html  penguins.html  precip.html  seattle.html  windturbines.html
getting_started/: build_dashboard.html  core_concepts.html  index.html  installation.html  lumen_architecture.html  pipelines.html
getting_started/building_lumen_apps/: index.html
getting_started/launching_lumen/: index.html
getting_started/navigating_the_ui/: index.html
getting_started/using_lumen_ai/: index.html
how_to/: index.html
how_to/advanced/: auth.html  callbacks.html  index.html  local_components.html  (+1 more)
installation/: index.html
lumen/: .version  __init__.py  __main__.py  __version.py  auth.py  base.py  command.py  config.py  dashboard.py  downloads.py  layout.py  monitor.py  panel.py  pipeline.py  rest.py  schema.py  serializers.py  state.py  target.py  test.ipynb  util.py  validation.py
lumen_ai/: index.html
lumen_spec/: index.html
monitor/: dashboard.py  monitor.py  rest.py  schema.py  view.py
quick_start/: index.html
reference/: Config.html  Defaults.html  Layout.html  Pipeline.html  index.html
releases/: index.html
scripts/: embed_vega_lite_docs.py  parse_logfire.py
ui/: configuration.html  index.html
(+831 files in other folders)
