[build-system]
requires = [
    "param >=1.7.0",
    "pyct >=0.4.4",
    "setuptools >=30.3.0"
]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = [
    # "B",
    "E",
    "F",
    "FLY",
    # "ICN",
    "NPY",
    # "PIE",
    # "PLC",
    # "PLE",
    # "PLR",
    # "PLW",
    "RUF",
    "UP",
    "W",
]

ignore = [
    "E402", # Module level import not at top of file
    "E501", # Line too long
    "E701", # Multiple statements on one line
    "E712", # Comparison to true should be is
    "E731", # Do not assign a lambda expression, use a def
    "E741", # Ambiguous variable name
    "F405", # From star imports
    "PLE0604", # Invalid object in `__all__`, must contain only strings
    "PLE0605", # Invalid format for `__all__`
    "PLR091", # Too many arguments/branches/statements
    "PLR2004", # Magic value used in comparison
    "PLW2901", # `for` loop variable is overwritten
    "RUF005", # Consider {expr} instead of concatenation
    "RUF012", # Mutable class attributes should use `typing.ClassVar`
]
extend-unsafe-fixes = [
    "F401", # Unused imports
    "F841", # Unused variables
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]
# "holoviews/tests/*" = [
#     "RUF001", # Ambiguous unicode character
#     "RUF002", # Ambiguous unicode character
#     "RUF003", # Ambiguous unicode character
#     "NPY002", # Replace legacy `np.random.rand` call with Generator
#     "B904", # Within an `except` clause, raise exceptions with from err or None
# ]
